Updated carousel functionality and fixed button hover issues

--- a/office/llc/llc.html
+++ b/office/llc/llc.html
@@ -507,7 +507,7 @@ The Language Learning Center offers relevant and quality language programs to bo
         <aside class="space-y-6 lg:sticky lg:top-24 lg:self-start">
           <!-- Contact Card -->
           <div class="glass-card rounded-3xl p-6 float-animation">
-            <h3 class="font-bold text-mcgreen text-lg mb-3">Contact & Hours</h3>
+            <h3 class="font-bold text-mcgreen text-lg mb-3">Contact Info and Office Hours</h3>
             <div class="space-y-3 text-sm">
               <div class="flex items-start gap-3">
 <svg class="w-5 h-5 text-mcgreen flex-shrink-0 mt-0.5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
